--- a/home.html
+++ b/home.html
@@ -292,7 +292,7 @@
 
           <div class="col">
             <div class="p-3 text-center">
-              <div class="py-3 rounded-3 bg-light bg-gradient">
+              <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fab fa-bootstrap text-warning fs-1"></i>
               </div>
                <h5 class="card-title mt-4 text-light">BOOTSTRAP</h5>
@@ -301,7 +301,7 @@
 
           <div class="col">
             <div class="p-3 text-center">
-              <div class="py-3 rounded-3 bg-light bg-gradient">
+              <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fab fa-react text-warning fs-1"></i>
               </div>
                <h5 class="card-title mt-4 text-light">REACT</h5>
@@ -310,7 +310,7 @@
 
           <div class="col">
             <div class="p-3 text-center">
-              <div class="py-3 rounded-3 bg-light bg-gradient">
+              <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fas fa-id-card text-warning fs-1"></i>
               </div>
                <h5 class="card-title mt-4 text-light">CARDS</h5>
@@ -319,7 +319,7 @@
 
           <div class="col">
             <div class="p-3 text-center">
-              <div class="py-3 rounded-3 bg-light bg-gradient">
+              <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fas fa-th-large text-warning fs-1"></i>
               </div>
                <h5 class="card-title mt-4 text-light">ICONS</h5>
@@ -328,7 +328,7 @@
 
           <div class="col">
             <div class="p-3 text-center">
-              <div class="py-3 rounded-3 bg-light bg-gradient">
+              <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fab fa-java text-warning fs-1"></i>
               </div>
                <h5 class="card-title mt-4 text-light">JAVA</h5>
@@ -337,7 +337,7 @@
 
           <div class="col">
             <div class="p-3 text-center">
-              <div class="py-3 rounded-3 bg-light bg-gradient">
+              <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fab fa-strava text-warning fs-1"></i>
               </div>
                <h5 class="card-title mt-4 text-light">STRAVA</h5>
@@ -347,7 +347,7 @@
 
           <div class="col">
             <div class="p-3 text-center">
-              <div class="py-3 rounded-3 bg-light bg-gradient">
+              <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fab fa-js text-warning fs-1"></i>
               </div>
                <h5 class="card-title mt-4 text-light">JSCRIPT</h5>
@@ -356,7 +356,7 @@
 
           <div class="col">
             <div class="p-3 text-center">
-              <div class="py-3 rounded-3 bg-light bg-gradient">
+              <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fab fa-python text-warning fs-1"></i>
               </div>
                <h5 class="card-title mt-4 text-light">PYTHON</h5>
@@ -365,7 +365,7 @@
 
           <div class="col">
             <div class="p-3 text-center">
-              <div class="py-3 rounded-3 bg-light bg-gradient">
+              <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fab fa-css3 text-warning fs-1"></i>
               </div>
                <h5 class="card-title mt-4 text-light">CSS 3</h5>
@@ -374,7 +374,7 @@
 
           <div class="col">
             <div class="p-3 text-center">
-              <div class="py-3 rounded-3 bg-light bg-gradient">
+              <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fas fa-code-branch text-warning fs-1"></i>
               </div>
                <h5 class="card-title mt-4 text-light">GIT</h5>
@@ -384,7 +384,7 @@
 
           <div class="col">
             <div class="p-3 text-center">
-              <div class="py-3 rounded-3 bg-light bg-gradient">
+              <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fab fa-html5 text-warning fs-1"></i>
               </div>
                <h5 class="card-title mt-4 text-light">HTML5</h5>
@@ -393,7 +393,7 @@
 
           <div class="col">
             <div class="p-3 text-center">
-              <div class="py-3 rounded-3 bg-light bg-gradient">
+              <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fab fa-php text-warning fs-1"></i>
               </div>
                <h5 class="card-title mt-4 text-light">PHP</h5>
@@ -402,7 +402,7 @@
 
           <div class="col">
             <div class="p-3 text-center">
-              <div class="py-3 rounded-3 bg-light bg-gradient">
+              <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fas fa-microchip text-warning fs-1"></i>
               </div>
                <h5 class="card-title mt-4 text-light">ASSEMBLY</h5>
@@ -411,7 +411,7 @@
 
           <div class="col">
             <div class="p-3 text-center">
-              <div class="py-3 rounded-3 bg-light bg-gradient">
+              <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fab fa-laravel text-warning fs-1"></i>
               </div>
                <h5 class="card-title mt-4 text-light">LARAVEL</h5>
@@ -420,7 +420,7 @@
 
           <div class="col">
             <div class="p-3 text-center">
-              <div class="py-3 rounded-3 bg-light bg-gradient">
+              <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fab fa-wordpress text-warning fs-1"></i>
               </div>
                <h5 class="card-title mt-4 text-light">WORDPRESS</h5>
@@ -429,7 +429,7 @@
 
           <div class="col">
             <div class="p-3 text-center">
-              <div class="py-3 rounded-3 bg-light bg-gradient">
+              <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fas fa-database text-warning fs-1"></i>
               </div>
                <h5 class="card-title mt-4 text-light">DATABASE</h5>
@@ -438,7 +438,7 @@
 
           <div class="col">
             <div class="p-3 text-center">
-              <div class="py-3 rounded-3 bg-light bg-gradient">
+              <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fas fa-robot text-warning fs-1"></i>
               </div>
                <h5 class="card-title mt-4 text-light">ROBOTICS</h5>
@@ -447,7 +447,7 @@
 
           <div class="col">
             <div class="p-3 text-center">
-              <div class="py-3 rounded-3 bg-light bg-gradient">
+              <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fab fa-android text-warning fs-1"></i>
               </div>
                <h5 class="card-title mt-4 text-light">ANDROID</h5>
