text color updated

--- a/home.html
+++ b/home.html
@@ -211,23 +211,23 @@
   <div class="row">
     <div class="col-12 col-md-4 col-lg-3 my-5 p-5 text-center">
         <i class="fas fa-laptop-code"></i>
-        <h5 class="card-title mt-4">RESPONSIVE DESIGN</h5>
-          <p class="card-text">The template is fully responsive and adapts to every screen size. Our focus is template looks staning in each and every device.</p>
+        <h5 class="card-title mt-4 text-success">RESPONSIVE DESIGN</h5>
+          <p class="card-text text-secondary">The template is fully responsive and adapts to every screen size. Our focus is template looks staning in each and every device.</p>
     </div>
     <div class="col-12 col-md-4 col-lg-3 my-5 p-5 text-center">
         <i class="fas fa-code"></i>
-        <h5 class="card-title mt-4">OPTIMIZE CODE</h5>
-          <p class="card-text">Focus on an optimized and friendly code. Smart coding always gives high-performance output.</p>
+        <h5 class="card-title mt-4 text-success">OPTIMIZE CODE</h5>
+          <p class="card-text text-secondary">Focus on an optimized and friendly code. Smart coding always gives high-performance output.</p>
     </div>
     <div class="col-12 col-md-4 col-lg-3 my-5 p-5 text-center">
         <i class="fas fa-paint-brush"></i>
-        <h5 class="card-title mt-4">MORDEN DESIGN</h5>
-          <p class="card-text">TPixel perfect design as per latest web design trends and eye-catching and user-friendly design to attract a world.</p>
+        <h5 class="card-title mt-4 text-success">MORDEN DESIGN</h5>
+          <p class="card-text text-secondary">TPixel perfect design as per latest web design trends and eye-catching and user-friendly design to attract a world.</p>
     </div>
     <div class="col-12 col-md-4 col-lg-3 my-5 p-5 text-center">
         <i class="fas fa-headset"></i>
-        <h5 class="card-title mt-4">DOCUMENTATION AND SUPPORT</h5>
-          <p class="card-text">Detailed and technical documentation as well as best rated professional support.</p>
+        <h5 class="card-title mt-4 text-success">DOCUMENTATION AND SUPPORT</h5>
+          <p class="card-text text-secondary">Detailed and technical documentation as well as best rated professional support.</p>
     </div>
    
   </div>
@@ -295,7 +295,7 @@
               <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fab fa-bootstrap text-warning fs-1"></i>
               </div>
-               <h5 class="card-title mt-4 text-light">BOOTSTRAP</h5>
+               <h5 class="card-title mt-4 text-secondary">BOOTSTRAP</h5>
             </div>
           </div>
 
@@ -304,7 +304,7 @@
               <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fab fa-react text-warning fs-1"></i>
               </div>
-               <h5 class="card-title mt-4 text-light">REACT</h5>
+               <h5 class="card-title mt-4 text-secondary">REACT</h5>
             </div>
           </div>
 
@@ -313,7 +313,7 @@
               <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fas fa-id-card text-warning fs-1"></i>
               </div>
-               <h5 class="card-title mt-4 text-light">CARDS</h5>
+               <h5 class="card-title mt-4 text-secondary">CARDS</h5>
             </div>
           </div>
 
@@ -322,7 +322,7 @@
               <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fas fa-th-large text-warning fs-1"></i>
               </div>
-               <h5 class="card-title mt-4 text-light">ICONS</h5>
+               <h5 class="card-title mt-4 text-secondary">ICONS</h5>
             </div>
           </div>
 
@@ -331,7 +331,7 @@
               <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fab fa-java text-warning fs-1"></i>
               </div>
-               <h5 class="card-title mt-4 text-light">JAVA</h5>
+               <h5 class="card-title mt-4 text-secondary">JAVA</h5>
             </div>
           </div>
 
@@ -340,7 +340,7 @@
               <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fab fa-strava text-warning fs-1"></i>
               </div>
-               <h5 class="card-title mt-4 text-light">STRAVA</h5>
+               <h5 class="card-title mt-4 text-secondary">STRAVA</h5>
             </div>
           </div>
 
@@ -350,7 +350,7 @@
               <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fab fa-js text-warning fs-1"></i>
               </div>
-               <h5 class="card-title mt-4 text-light">JSCRIPT</h5>
+               <h5 class="card-title mt-4 text-secondary">JSCRIPT</h5>
             </div>
           </div>
 
@@ -359,7 +359,7 @@
               <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fab fa-python text-warning fs-1"></i>
               </div>
-               <h5 class="card-title mt-4 text-light">PYTHON</h5>
+               <h5 class="card-title mt-4 text-secondary">PYTHON</h5>
             </div>
           </div>
 
@@ -368,7 +368,7 @@
               <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fab fa-css3 text-warning fs-1"></i>
               </div>
-               <h5 class="card-title mt-4 text-light">CSS 3</h5>
+               <h5 class="card-title mt-4 text-secondary">CSS 3</h5>
             </div>
           </div>
 
@@ -377,7 +377,7 @@
               <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fas fa-code-branch text-warning fs-1"></i>
               </div>
-               <h5 class="card-title mt-4 text-light">GIT</h5>
+               <h5 class="card-title mt-4 text-secondary">GIT</h5>
             </div>
           </div>
 
@@ -387,7 +387,7 @@
               <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fab fa-html5 text-warning fs-1"></i>
               </div>
-               <h5 class="card-title mt-4 text-light">HTML5</h5>
+               <h5 class="card-title mt-4 text-secondary">HTML5</h5>
             </div>
           </div>
 
@@ -396,7 +396,7 @@
               <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fab fa-php text-warning fs-1"></i>
               </div>
-               <h5 class="card-title mt-4 text-light">PHP</h5>
+               <h5 class="card-title mt-4 text-secondary">PHP</h5>
             </div>
           </div>
 
@@ -405,7 +405,7 @@
               <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fas fa-microchip text-warning fs-1"></i>
               </div>
-               <h5 class="card-title mt-4 text-light">ASSEMBLY</h5>
+               <h5 class="card-title mt-4 text-secondary">ASSEMBLY</h5>
             </div>
           </div>
 
@@ -414,7 +414,7 @@
               <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fab fa-laravel text-warning fs-1"></i>
               </div>
-               <h5 class="card-title mt-4 text-light">LARAVEL</h5>
+               <h5 class="card-title mt-4 text-secondary">LARAVEL</h5>
             </div>
           </div>
 
@@ -423,7 +423,7 @@
               <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fab fa-wordpress text-warning fs-1"></i>
               </div>
-               <h5 class="card-title mt-4 text-light">WORDPRESS</h5>
+               <h5 class="card-title mt-4 text-secondary">WORDPRESS</h5>
             </div>
           </div>
 
@@ -432,7 +432,7 @@
               <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fas fa-database text-warning fs-1"></i>
               </div>
-               <h5 class="card-title mt-4 text-light">DATABASE</h5>
+               <h5 class="card-title mt-4 text-secondary">DATABASE</h5>
             </div>
           </div>
 
@@ -441,7 +441,7 @@
               <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fas fa-robot text-warning fs-1"></i>
               </div>
-               <h5 class="card-title mt-4 text-light">ROBOTICS</h5>
+               <h5 class="card-title mt-4 text-secondary">ROBOTICS</h5>
             </div>
           </div>
 
@@ -450,7 +450,7 @@
               <div class="py-3 rounded-3 bg-light bg-gradient hover-fuction">
                 <i class="fab fa-android text-warning fs-1"></i>
               </div>
-               <h5 class="card-title mt-4 text-light">ANDROID</h5>
+               <h5 class="card-title mt-4 text-secondary">ANDROID</h5>
             </div>
           </div>
           
