--- a/home.html
+++ b/home.html
@@ -459,7 +459,10 @@
       </div>
 </section>
 
-
+<section class="ms-5">
+  <h2 class="card-title mt-4 text-color text-center">UNLIMITED PAGE LAYOUT</h2>
+  <p class="text-center text-light">Qbix gives you a freedom to use single column full width, left or right and <br>dual sidebars your site..</p>
+</section>
     
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script></body>
