--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parallax Effect</title>
     <link rel="stylesheet" href="styles.css">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+
+<!-- animation link  -->
+    <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
 <!-- fontawesome -->
 <script src="https://kit.fontawesome.com/cfd69f1693.js" crossorigin="anonymous"></script>
@@ -43,7 +43,7 @@
         </div>
 
     <div class="page-background">
-        <div class="text"><h1>QBI</h1><h1 class="text-color animate__animated animate__zoomInDown">X</h1></div>
+        <div class="text"><h1>QRA</h1><h1 class="text-color animate__animated animate__zoomInDown">X</h1></div>
                 
         <p class="text-details">Creative agency, corporate and portfolio multi-purpose <br> template
         </p>
@@ -127,7 +127,7 @@
                 <div class="row gx-10">
                   <div class="col-12 col-md-6 col-lg-4 mb-5">
                    <div class="p-3">
-                       <img class="img-fluid" src="image/photo-album/photo-1.jpg" alt="">
+                      <a href="ckav-art.html"> <img class="img-fluid" src="image/photo-album/photo-1.jpg" alt=""></a>
                        </div> <h4 class="text-center text-light">AGENCY</h4>
                   </div>
                   <div class="col-12 col-md-6 col-lg-4 mb-5">
