--- a/ckav-art.html
+++ b/ckav-art.html
@@ -194,7 +194,8 @@
         <section class="container  text-start d-flex align-items-center" style="
          height: 600px;">
         <div class="ms-auto">
-        <h1 class="display-4 fw-bold text-warning">Work On Time</h1>
+            
+        <h1 class="display-4 fw-bold text-warning"> <i class="fas fa-business-time design-i"></i><br> Work On Time</h1>
         <p class="text-light">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit.  In euismod sollicitudin ante. Nulla <br>facilisi. Fusce accumsan, erat quis fermentum feugiat, ex arcu tempus  lacus, sed rhoncus <br> ipsum arcu a quam. </p>
 
