updated margin issue

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 
 <!-- 18 icons section -->
 <section class="design-container">
-    <h2 class="card-title mt-4 text-color text-center"><span class="text-secondary">CORE</span> FEATURES</h2>
+    <h2 class="card-title mt-4 text-color text-center"><span class="text-warning">CORE</span> FEATURES</h2>
     <p class="text-center text-light">Powerful features and inclusions, which makes Qbix standout, easily <br> customizable and scalable.</p>
 
     <div class="container">
@@ -467,7 +467,7 @@
       
 </section>
 
-<section class="cilent-feedback">
+<section class="design-container">
   <section class="container cilent">
   <div class="text-center">
       <h4 class="text-warning mb-5">TESTIMONIALS</h4>
