--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
           <div class="cilent-text border"> 
           <div class="mt-5">
               <h3>Rajib <span class="text-danger">Hasan</span> </h3>
-              <h5 class="text-muted">Creative Director</h5>
+              <h5 class="text-muted">Software Developer</h5>
               <div class="d-fle"><i class="fas fa-quote-left text-danger"></i> <hr class="hrr"></div>
               <p class="mb-5">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
 
@@ -512,8 +512,8 @@
       <div class="col-12 col-md-6 col-lg-3 pt-5">
           <div class="cilent-text border"> 
           <div class="mt-5">
-            <h3>Almas <span class="text-danger">Haladar</span> </h3>
-              <h5 class="text-muted">Creative Director</h5>
+            <h3>Almas <span class="text-danger">Hawladar</span> </h3>
+              <h5 class="text-muted">Freelancer</h5>
               <div class="d-fle"><i class="fas fa-quote-left text-danger"></i> <hr class="hrr"></div>
               <p class="mb-5">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
 
@@ -531,7 +531,7 @@
           <div class="cilent-text border"> 
           <div class="mt-5">
             <h3>Shamim <span class="text-danger">Talukder</span> </h3>
-              <h5 class="text-muted">Creative Director</h5>
+              <h5 class="text-muted">Media Person</h5>
               <div class="d-fle"><i class="fas fa-quote-left text-danger"></i> <hr class="hrr"></div>
               <p class="mb-5">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
 
